# chdrms

./: .env.example  .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.yaml  config.dev.toml  config.example.toml  flake.nix  sqlx.toml
.cargo/: config.toml
.sqlx/: query-032f5766cbab1b1102503e9dc456880f6c1adc8a6987aef5b46bfd2f241baf88.json  query-05af4fc186c8fcfcf89162326f4062ceb662625971117e2e0323a1b93279a93e.json  query-0774221b8d56e0af2a5379b9439e87270bcac4e2476ea0e5ff8351d503177545.json  query-0929cae4431dec98c2287c08254c2b7e97385461d95a6bef87c04d8eeb32b827.json  query-125aa76370dd031862ebdf628ca4fb01bf89923e73e839b5bdf51124bc6aa10c.json  query-130695f77ab4dcb19f9c2d7c178663e16f2261a228e971f4b2d782f8629a7392.json  query-14bbf3bbe18289882a2ddf4b4e7144b4a51e3ec561b4e7b87d78a5f7c1b22275.json  query-1763c93305d9cd81d2804cfb54166c9c592988226341ce39606d9b4f63fdf103.json  query-19345dd7af53d68225298aadb54db14dd448f9e3a0ebbd4401a62d2af8375383.json  query-197656ed094a83d327cc78f64d7d0d3e32a980b552ebdfa32a83899d738290a4.json  query-1adb77abd5ec64be2ac0242003cbda252d7e0b041da2a81fc0b44248c4156141.json  query-2555e6132f4bb35bf4f10493edbabf0c9c228dd3a5d6af8342b0d3adcd066434.json  query-25caa957b1f5776684827b286cfacc9867c46fc9f5eb6ed72809866c29405dfe.json  query-263271a13a6917088a043633d4f5ac6c3ce602e5b0208be5e641ffca1b4a0bb6.json  query-29fe7cf99f6803bb79d615aff040ae343c30f1083b163bd96bf3da5ebdfb13bd.json  query-2d306d7a6f3a9c0d73eeaebae69edc55ec509140451baf1d8d708a2eb4989ce2.json  query-2d98daea1ff1f87132a9c3a7f70e720b548fcac620bd82a0bc052386d468fdb3.json  query-364f310b52d37779cab11f1131d03d6f45193b92b5a0edeb5b8c5a3a2c006e75.json  query-49edfcd7ff2c1f9b5706735fab9a38cb7054a8274d69a9e3ef738205d1db3890.json  query-4b1fd57cb1a0f61f6a59ed697570f6a08e552ac6ee54aa9503d368474f4e4ca8.json  query-57f16be9bbae24f2f81774d83bc2919961affd2b18b5eb3aacdbaa097001cc38.json  query-5902647c57aca8e015b479cf13e9d44c1b0fae645f20a4825e9292270758c8b3.json  query-5a207f76587ac78b646aa454af4a757b0ca87f2178fcd7b47415c28431521798.json  query-5b8b26cba9c552afdf0636da0e50ae109efacae4d56744b080d1dd6f96676bb4.json  query-5cd4a49d00e2a73fc63f995c07a89122795ff504829b19408eb3f7710f9d6a08.json  query-5d4cf268ff850f42fc989f6a8571ac7996873595095e1f73cbb243fb06713af6.json  query-5fb47e99d9d4b13e48fcaa99e6da841356530e6e4bc76b435d65290c89b21589.json  (+28 more)
backend/database/: Cargo.toml
backend/database/migrations/: 20260610211403_create_users.sql  20260610220820_create_session.sql  20260611162148_create_user_identities.sql  20260613211219_create_user_groups.sql  20260615191359_create_permissions.sql  20260619165854_create_manufacturers.sql  20260626153226_create_asset_types.sql  20260707103201_create_locations.sql  20260710225922_create_assets.sql
backend/database/src/: asset.rs  asset_type.rs  bundle.rs  lib.rs  location.rs  manufacturer.rs  permission.rs  user.rs  user_group.rs
backend/database/src/fixtures/: asset_types.sql
backend/server/: Cargo.toml
backend/server/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs  storage.rs
backend/server/src/auth/: mod.rs  oidc.rs  permissions.rs
backend/server/src/routes/: asset_type.rs  auth.rs  group.rs  location.rs  manufacturer.rs  mod.rs  user.rs
backend/server/src/routes/asset/: mod.rs  model.rs
backend/server/src/routes/group/: manage.rs  members.rs  mod.rs  permissions.rs
(+42 files in other folders)
