[package]
name = "chdrms_database"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-extra = { version = "0.12.6", features = ["cookie"] }
casey = "0.4.2"
chdrms_database_macros = { path = "../database_macros" }
chrono = "0.4.45"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "migrate", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
uuid = "1.23.3"
