[package]
name = "chdrms_server"
version = "0.1.0"
edition = "2024"

default-run = "chdrms_server"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private", "typed-header"] }
axum-valid = { version = "0.24.0", default-features = false, features = ["validify", "basic"] }
chdrms_database = { version = "0.1.0", path = "../database" }
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "migrate", "postgres", "macros", "uuid"] }
rust_decimal = "1.42.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-http = { version = "0.6.11", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "url", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.3", features = ["serde"] }
validify = "2.0.0"
url = "2.5.8"

[dev-dependencies]
serde_json = "1.0.150"
